--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express-session": "^1.15.3",
     "mongoose": "^4.8.7",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "serve-favicon": "~2.3.2"
   }
 }
